added the first css file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first ever git work</title>
+    <link rel="stylesheet" href="styles/vlog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>github practise</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque nobis quis reprehenderit perspiciatis corporis facilis labore libero quo ullam laborum numquam recusandae molestias tempore eum voluptates minima illum, assumenda quasi!</p>
+    </div>
 </body>
 </html>
