--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         <h3>github practise</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque nobis quis reprehenderit perspiciatis corporis facilis labore libero quo ullam laborum numquam recusandae molestias tempore eum voluptates minima illum, assumenda quasi!</p>
     </div>
+    <div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio accusamus culpa, ut explicabo atque mollitia possimus odit consectetur veniam nostrum! Odit officiis minus debitis sequi corrupti voluptate dolorem impedit beatae.</p>
+    </div>
 </body>
 </html>
